--- a/home/templates/home/snippet/dashboard_application_summary.html
+++ b/home/templates/home/snippet/dashboard_application_summary.html
@@ -1,7 +1,7 @@
 <h1>Application Status</h1>
 <ul>
 	{% if pending_applications_count %}
-		<li><a href="{% url 'pending-applicants-summary' %}">{{ pending_applications_count }} pending applications to review</a></li>
+		<li><a href="{% url 'pending-applicants-summary' %}">{{ pending_applications_count }} pending applications to review</a>. {{ pending_revisions_count }} applications need essay revisions.</li>
 	{% endif %}
 	{% if rejected_applications_count %}
 		<li><a href="{% url 'rejected-applicants-summary' %}">{{ rejected_applications_count }} rejected applications</a></li>
