Add a warning to the top of the essay questions on the initial application form

--- a/home/templates/home/eligibility_wizard_essay_questions.html
+++ b/home/templates/home/eligibility_wizard_essay_questions.html
@@ -21,6 +21,25 @@ We will not associate your personally identifible information with your essay an
 We will remove any personally identifying information from the essay answers.
 </p>
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
+<div class="card border-warning mb-3">
+	<div class="card-header text-white bg-warning">Please read these instructions carefully</div>
+	<div class="card-body">
+		<div class="card-text">
+			<p>
+			These essay questions are a very important part of your application.
+			You should spend at least 5-10 minutes thinking about how to answer them.
+			</p>
+			<p>
+			Please review the essay questions carefully.
+			Make sure to review the help text below the question.
+			</p>
+			<p>
+			Good essay answers have at least 2 to 3 sentences.
+			We prefer essays with detailed examples or stories from your life.
+			</p>
+		</div>
+	</div>
+</div>
 <hr>
 
 <form action="" method="post">{% csrf_token %}
