--- a/home/templates/home/eligibility.html
+++ b/home/templates/home/eligibility.html
@@ -22,20 +22,30 @@
 	<li>You are or will be 18 years of age or older by {{ current_round.internstarts }}</li>
 	<li>You have not previously participated in an Outreachy, Outreach Program for Women, or Google Summer of Code internship. People who participated as an intern for Google Summer of Code are not eligible for Outreachy. All Google Summer of Code participants are ineligible for Outreachy, including people who did not successfully finish their GSoC internship.</li>
 	<li>You are available for a full-time, 40 hours a week internship from {{ current_round.internstarts }} to {{ current_round.internends }}.</li>
-	<li>Outreachy is open to both students and people who are not students. However, applicants who are students must meet additional requirements. Please have your class schedule and school calendar on hand when completing the initial application.</li>
+	<li>Outreachy is open to both students and people who are not students. However, applicants who are students must have at least 49 consecutive days free from full-time commitments. Due to the time commitment, students in the northern hemisphere will most likely be eligible for the May to August internship round. Students from the southern hemisphere will most likely be eligible for the December to March internships. Please have your class schedule and school calendar on hand when completing the initial application.</li>
 	<li>Outreachy internships are full-time 40-hour a week internships. Applicants who have part-time or contracting jobs are welcome to apply, but they must meet additional requirements.
 </ul>
 
+<h2>Additional Information to Provide</h2>
 <p>The initial application also includes questions about:</p>
 <ul>
 	<li>Your gender identity</li>
 	<li>Your race or ethnicity (only for residents and nationals of the United States of America)</li>
+	<li>Three essay questions:</li>
+	<ol>
+		<li><b>What barriers or concerns have kept you from contributing to free and open source software?</b> Please provide specific examples. Outreachy organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+		<li><b>What systematic bias or discrimination have you faced while building your skills?</b> Outreachy projects often require applicants to know some basic skills. Those skills might include programming, user experience, documentation, illustration and graphical design, or data science. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. In these settings, have you faced systematic bias or discrimination? Have you been discouraged from accessing these resources because of your identity or background? Please provide specific examples and (optionally) statistics. Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+
+		<li><b>Does your learning environment have few people who share your identity or background? Please provide details.</b> Contributing to free and open source software takes some skill. You may have already learned some basic skills through university or college classes, specialized schools, online classes, online resources, or with a mentor, friend, family member or co-worker. Does any of your learning environments have few people who share your identity or background? How did your identity or background differ from the majority of people in this learning environment? Outreachy Organizers strongly encourage you to write your personal stories. We want you to know that we won't judge your writing style, grammar or spelling.</li>
+	</ol>
 </ul>
+
+<h2>Intern Agreements and Forms</h2>
 
 <p>All accepted interns must sign an <a href="{% url 'generic-intern-contract-export' %}">intern agreement</a>. This is a legal document that certifies you are eligible to apply for Outreachy, and that all the eligibility information you supply in your application is truthful. All accepted interns will need to fill out either a W8-BEN or a W-9 tax form. It is fraud if you sign these legal documents after supplying incorrect information.</p>
 
 <p>If you are concerned about these forms, please note that Outreachy has experience with people in the middle of a legal name change and transgender people who cannot change their legal name. Only Outreachy organizers and the Software Freedom Conservancy accounting team will see these legal documents. Your mentors will not see your tax form or your signed intern agreement.</p>
-
 
 {% if not current_round.has_application_period_started %}
 	<h2>Initial Application</h2>
