--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -30,7 +30,7 @@ Outreachy eligibility results
 
 	{% include 'home/snippet/initial_application.html' %}
 
-{% elif application.approval_status == application.REJECTED and application.reason_denied != 'TIME' %}
+{% elif application.approval_status == application.REJECTED and application.reason_denied != 'TIME' and application.reason_denied|slice:5 != ALIGN %}
 	<h1>Initial application is not approved</h1>
 	<p>We're sorry, but after reviewing your application,
 	we have determined that you are not a strong applicant for the Outreachy internship program.
@@ -50,7 +50,26 @@ Outreachy eligibility results
 	</p>
 
 	{% include 'home/snippet/initial_application.html' %}
+{% elif application.approval_status == application.REJECTED and application.reason_denied|slice:":5" == 'ALIGN' %}
+	<h1>Initial application is not approved</h1>
+	<p>The Outreachy organizers have been reviewing your initial application, including your essay questions.</p>
 
+	<p>Outreachy has a program goal of supporting people who are from
+	groups underrepresented in the technology industry of their country.
+	Based on your essay answers, we found that you did not sufficiently
+	explain why your application is aligned with the Outreachy program goal
+	of supporting people from groups underrepresented in the technology
+	industry of their country.</p>
+
+	<p>We're sorry to say your initial application was not approved.</p>
+
+	<p>Please review your application below to ensure the information you submitted is correct.</p>
+
+	<p>If the information is incorrect, please <a href="/contact">contact the Outreachy organizers</a> to update it.</p>
+
+	<p>If the information is correct, please take a look at the list of <a href="/opportunities">other opportunities</a> that may be a better fit for you.</p>
+
+	{% include 'home/snippet/initial_application.html' %}
 {% elif application.approval_status == application.REJECTED and application.reason_denied == 'TIME' %}
 
 	<h1>Initial application is not approved</h1>
