Be consistent about using 49 days and not 7 weeks as requirement

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -76,7 +76,7 @@ Outreachy eligibility results
 
 	<p>
 	We're sorry, but based on the time commitment information your supplied on your initial application,
-	you don't have 7 consecutive weeks free from full-time commitments.
+	you don't have 49 consecutive days free from full-time commitments.
 	</p>
 	<p>
 	We encourage you to apply another round.
