Cover applicants rejected for time who aren't students

--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -74,19 +74,32 @@ Outreachy eligibility results
 
 	<h1>Initial application is not approved</h1>
 
+	<p>After reviewing your time commitments, we have determined you do not
+	have 49 consecutive days free from full-time commitments, and thus are
+	not eligible for this round of Outreachy internships.</p>
+
 	<p>
-	We're sorry, but based on the time commitment information your supplied on your initial application,
-	you don't have 49 consecutive days free from full-time commitments.
-	</p>
-	<p>
-	We encourage you to apply another round.
+	We encourage you to apply another round!
 	Please sign up for the
 	<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement mailing list</a>,
 	so you can be notified when the next application period opens.
 	</p>
+
 	<h2><strong>Your Time Commitments:</strong></h2>
 
 	{% include 'home/snippet/time_commitments.html' %}
+
+	<p>Outreachy organizers review each applicant's time commitments,
+	including volunteer work, employment, contract work, stated class
+	credits, and the school's academic calendar.</p>
+	
+	<p>For applicants who are students, we look at the school's academic
+	calendar to determine if students have a long enough break between
+	school terms. In order to be eligible, applicants who are students must
+	have 49 consecutive days free from full-time commitments during the
+	Outreachy internship period. 49 days is the absolute minimum, and we
+	cannot make exceptions or accept letters from school administrators for
+	exceptions.</p>
 
 	<h2>Weeks Free From Full-Time Commitments</h2>
 
