--- a/home/templates/home/applicant_review_summary.html
+++ b/home/templates/home/applicant_review_summary.html
@@ -14,7 +14,7 @@ Applicant Review Summary
 		<table class="table table-striped table-bordered">
 			{% include 'home/snippet/application_review_headers.html' %}
 			{% for app in pending_applications %}
-				{% if not app.barrierstoparticipation.applicant_should_update %}
+				{% if not app.barrierstoparticipation.applicant_should_update and not app.schoolinformation.applicant_should_update %}
 					{% include 'home/snippet/application_review_rows.html' %}
 				{% endif %}
 			{% endfor %}
@@ -23,7 +23,7 @@ Applicant Review Summary
 		<table class="table table-striped table-bordered">
 			{% include 'home/snippet/application_review_headers.html' %}
 			{% for app in pending_applications %}
-				{% if app.barrierstoparticipation.applicant_should_update %}
+				{% if app.barrierstoparticipation.applicant_should_update or app.schoolinformation.applicant_should_update %}
 					{% include 'home/snippet/application_review_rows.html' %}
 				{% endif %}
 			{% endfor %}
