Allow reviewers to see initial applications

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 {% comment %}FIXME: create new class for applicant reviewers and deny people access if they aren't staff or an approved applicant reviewer{% endcomment %}
-{% if not user.is_staff %}
+{% if not user.is_staff and not user.comrade.approved_reviewer %}
 	<p>You are not authorized to review applications.</p>
 {% else %}
 	{% if application.approval_status == application.APPROVED %}
