--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -17,6 +17,21 @@ Outreachy internships working with {{ community.name }}
 		Outreachy application period starts on {{ current_round.appsopen }} at 4pm UTC.
 		You can sign up for an email notification when the round opens by
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">subscribing to the Outreachy announcements mailing list</a>.</p>
+	{% elif not user.comrade.eligible_application and not mentors_pending_projects %}
+		{% if not user.comrade %}
+			You may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a> to see this information.</p>
+		{% elif user.comrade.needs_application %}
+			<p>This information is only available to applicants who have their initial application approved.
+			Please <a href="{% url 'eligibility' %}">fill out an initial application</a>.</p>
+		{% elif user.comrade.ineligible_application %}
+			<p>This information is only available to applicants who have their initial application approved.
+			Unfortunately, your initial application is not approved.
+			</p>
+		{% elif user.comrade.pending_application %}
+			<p>This information is only available to applicants who have their initial application approved.
+			Your initial application is currently pending review by Outreachy organizers.
+			</p>
+		{% endif %}
 	{% elif approved_to_see_all_project_details or mentors_pending_projects %}
 
 		{% if not current_round.has_application_period_started %}
