--- a/home/templates/home/community_landing.html
+++ b/home/templates/home/community_landing.html
@@ -17,7 +17,7 @@ Outreachy internships working with {{ community.name }}
 		Outreachy application period starts on {{ current_round.appsopen }} at 4pm UTC.
 		You can sign up for an email notification when the round opens by
 		<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">subscribing to the Outreachy announcements mailing list</a>.</p>
-	{% elif not user.comrade.eligible_application and not mentors_pending_projects %}
+	{% elif not user.comrade.eligible_application and not mentors_pending_projects and not user.comrade.approved_reviewer %}
 		{% if not user.comrade %}
 			You may need to <a href="{% url 'login' %}?next={{ request.path|urlencode }}">log in</a> to see this information.</p>
 		{% elif user.comrade.needs_application %}
@@ -161,7 +161,7 @@ Outreachy internships working with {{ community.name }}
 							<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 						{% endif %}
 					{% endif %}
-					{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
+					{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
 							<div class="card">
 								<div class="card-header">
 									<h4 class="mb-0">Detailed Project Information</h4>
@@ -194,7 +194,7 @@ Outreachy internships working with {{ community.name }}
 						<p><a class='btn btn-success' href="{% url 'contributions' round_slug=current_round.slug community_slug=community.slug project_slug=project.slug %}">Record Contibutions and Apply to This Project</a></p>
 					{% endif %}
 				{% endif %}
-				{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator %}
+				{% if request.user.comrade.eligible_application or request.user.comrade.approved_mentor_or_coordinator or request.user.comrade.approved_reviewer %}
 					<div id="project-closed-accordion-{{ forloop.counter }}" class="accordion">
 						<div class="card">
 							<div class="card-header" role="tab" id="project-closed-heading-{{ forloop.counter }}">
