Fix typo in line 7

--- a/home/templates/home/snippet/time_commitment_overview.html
+++ b/home/templates/home/snippet/time_commitment_overview.html
@@ -4,7 +4,7 @@
 		<li><strong>{{ tcs.longest_period_free }} days out of {{ tcs.internship_total_days.days }} days free</strong> from full-time commitments during the internship.
 			<ul>
 				<li>Applicant has {{ tcs.longest_period_free }} consecutive days free from full-time commitments during the internship period.</li>
-				<li>Applicants are required to have at least 49 consecutive days free from full-time commiments.</li>
+				<li>Applicants are required to have at least 49 consecutive days free from full-time commitments.</li>
 				<li>The internship period is {{ tcs.internship_total_days.days }} days long.</li>
 				<li>Applicant is free from {{ tcs.free_period_start_date }} to {{ tcs.free_period_end_date }}.</li>
 			</ul>
