--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -20,8 +20,25 @@
                 {% endwith %}
             {% endblock %}
         </title>
-        <meta name="description" content="" />
+        <meta name="description" content="An internship program that supports diversity in free and open source software." />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        
+        <!-- Twitter Card data -->
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@outreachy">
+        <meta name="twitter:title" content="Outreachy | Internships Supporting Diversity in Tech">
+        <meta name="twitter:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!">
+        <!-- Twitter Summary card images must be at least 120x120px -->
+        <meta name="twitter:image" content="https://www.outreachy.org/media/images/outreachy-open-graph-1200x1200_RjIfgfZ.original.png">
+
+        <!-- Open Graph data -->
+        <meta property="og:title" content="Outreachy | Internships Supporting Diversity in Tech " />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://www.outreachy.org/" />
+        <meta property="og:image" content="https://www.outreachy.org/media/images/outreachy-open-graph-1200x1200_RjIfgfZ.original.png" />
+        <meta property="og:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!" />
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="1200">
 
         {# Global stylesheets #}
         {% compress css %}
