Make it clear mentors submit projects

--- a/home/templates/home/round_page_with_communities.html
+++ b/home/templates/home/round_page_with_communities.html
@@ -35,7 +35,7 @@ Outreachy Internships | Apply | Pick a Project
 <table class=table>
 	<tr><td>{{ current_round.appsopen }}</td><td>Applicants start making contributions to internship projects</td></tr>
 	<tr><td>{{ current_round.lateorgs }}</td><td>Last date for new mentoring community listings</td></tr>
-	<tr><td>{{ current_round.ProjectsDeadline }}</td><td>Last date for new internship project listings</td></tr>
+	<tr><td>{{ current_round.ProjectsDeadline }}</td><td>Last date for mentors to submit new internship project listings</td></tr>
 	<tr><td>{{ current_round.appsclose }} at 4pm UTC</td><td>Application deadline. Last day to finish any contributions to internship projects. Applications who made a contribution must submit the rest of their project application by this date.</td></tr>
 	<tr><td>{{ current_round.appslate }} at 4pm UTC</td><td>Late application deadline for specific projects (see below for which projects are accepting late applications)</td></tr>
 	<tr><td>{{ current_round.appsclose }} to {{ current_round.internannounce }}</td><td>Applicants are encouraged to continue making contributions</td></tr>
