--- a/outreachyhome/templates/base.html
+++ b/outreachyhome/templates/base.html
@@ -1,5 +1,6 @@
 {% load compress %}
 {% load static wagtailuserbar %}
+{% load static %}
 {% load wagtailcore_tags %}
 
 <!DOCTYPE html>
@@ -29,13 +30,13 @@
         <meta name="twitter:title" content="Outreachy | Internships Supporting Diversity in Tech">
         <meta name="twitter:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!">
         <!-- Twitter Summary card images must be at least 120x120px -->
-        <meta name="twitter:image" content="https://www.outreachy.org/media/images/outreachy-open-graph-1200x1200_RjIfgfZ.original.png">
+	<meta name="twitter:image" content="{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
 
         <!-- Open Graph data -->
         <meta property="og:title" content="Outreachy | Internships Supporting Diversity in Tech " />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://www.outreachy.org/" />
-        <meta property="og:image" content="https://www.outreachy.org/media/images/outreachy-open-graph-1200x1200_RjIfgfZ.original.png" />
+        <meta property="og:image" content="{% static 'outreachy-logo-open-graph-1200x1200.png' %}">
         <meta property="og:description" content="An internship program that supports diversity in free and open source software. Learn more by visiting our website!" />
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="1200">
